deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gidp-eva-infobip
  namespace: eva
  labels:
    app: gidp-eva-infobip
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gidp-eva-infobip
      version: v1
  template:
    metadata:
      labels:
        app: gidp-eva-infobip
        version: v1
    spec:
      containers:
        - name: gidp-eva-infobip
          image: eva3registry.azurecr.io/gidp-eva-infobip:3.2.2.0
          imagePullPolicy: Always
          ports:
            - name: http-infobip
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http-infobip
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http-infobip      
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 2
          resources:
            limits:
              cpu: 2500m
              memory: 3072Mi
            requests:
              cpu: 200m
              memory: 1024Mi
      imagePullSecrets:
        - name: containerregistrysecret
