deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gidp-eva-infobip
  namespace: eva
spec:
  hosts:
  - "*"
  gateways:
  - eva-gateway
  http:
  - match:
    - uri:
        prefix: /gidp-eva-infobip/
    rewrite:
      uri: /
    route:
    - destination:
        host: gidp-eva-infobip
        port:
          number: 8080
